# tap-esco

./: README.md  REGEX_test.py  meltano.yml  pyproject.toml  state.json  tap-esco.sh
tap_esco/: streams.py  streams_test.py  tap.py
