[tool.poetry]
name = "tap-esco"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tap_esco"}]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.12"
singer-sdk = "0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-esco = 'tap_esco.tap:cli'
